fix contrast error

--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -109,8 +109,8 @@ nav ul li a:hover {
   text-align: center;
   margin: 0.5rem 1rem;
   padding: 0.2rem 0;
-  background-color: #748e9c;
-  color: var(--color5);
+  background-color: var(--color2); /*#748e9c;*/
+  color: black;
   font-size: 0.9rem;
 }
 
